<resources>
    <string name="app_name">Android-Battery-Saver</string>
    <string name="settings">Settings</string>
    <string name="usageStats">Usage Stats</string>
    <string name="mainFragment">Main</string>
    <string name="activate">Activate</string>
    <string name="configurationFragment">Config</string>
    <string name="deactivate">Deactivate</string>
    <string name="main_menu">Main Menu</string>
    <string name="bubble_button">Bubble Button</string>
    <string name="notification_bar">Notification Bar</string>
    <string name="noGovernorSelected">No governor selected. Go to config tab first.</string>
    <string name="choose_governor">Choose a Governor</string>
    <string name="readTAinterval">Time to read TA in s</string>
    <string name="reduceCpuTime">Time window to reduce CPU freq in s</string>
    <string name="increaseFreq">Amount of frequency to increase</string>
    <string name="reduceCpuFreq">Amount of frequency to reduce after A has passed</string>
    <string name="userImpatienceLevel">User Impatience Level</string>
</resources>