<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <Spinner
            android:id="@+id/governors_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/governors"
            android:prompt="@string/choose_governor"/>
        <com.google.android.material.textfield.TextInputLayout
            android:visibility="gone"
            android:id="@+id/readTA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/readTAinterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeWindow"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/reduceCpuTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/increaseFrequency"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/increaseFreq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reduceFrequency"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/reduceCpuFreq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/impatienceLevel"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/userImpatienceLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save" />
    </LinearLayout>
</LinearLayout>